some texts were changed

--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
       </div>
       
       <div class="imagen-container">
-        <img src="./IMG/Iones.svg" class="img-fluid image-banner mb-3" />
+        <img src="./IMG/Iones.png" class="img-fluid image-banner mb-3" />
         <h6 class="text-styles">
           <strong> IONES </strong>
         </h6>
@@ -421,7 +421,7 @@
       <div class="imagen-container">
         <img src="./IMG/Microacondicionador.svg" class=" img-fluid image-banner mb-3" />
         <h6 class="text-styles">
-          <strong>MICRO <br>ACONDICIONADORES</strong>
+          <strong>MICRO- <br>ACONDICIONADORES</strong>
         </h6>
       </div>
 
@@ -539,8 +539,7 @@
             <strong>¡OLVIDATE DEL FRIZZ!</strong>
           </h4>
           <p class="p_pixel newaline">
-            El secador de cabello Diamond Ceramic Shine de Remington cuenta con un generador de iones que disminuye el tiempo de secado y ayuda el cabelo a absorber la humedad essencial reduciendo el frizz y la estática. 
-          </p>
+El secador de cabello Diamond Ceramic Shine de Remington cuenta con un generador de iones que disminuye el tiempo de secado y ayuda el cabello a absorber la humedad, reduciendo el frizz y la estática.          </p>
         </div>
         <div class="col-sm-4">
           <h4 class="text-left h4 LISTADO" style="text-transform: uppercase">
