some texts were changed

--- a/index.html
+++ b/index.html
@@ -412,13 +412,6 @@
       </div>
 
       <div class="imagen-container">
-        <img src="./IMG/Turmalina + Ceramica.svg" class="img-fluid image-banner mb-3" />
-        <h6 class="text-styles unalinea">
-          <strong>TURMALINA</strong>
-        </h6>
-      </div>
-
-      <div class="imagen-container">
         <img src="./IMG/Microacondicionador.svg" class=" img-fluid image-banner mb-3" />
         <h6 class="text-styles">
           <strong>MICRO- <br>ACONDICIONADORES</strong>
@@ -426,6 +419,15 @@
       </div>
 
 
+
+      <div class="imagen-container">
+        <img src="./IMG/Turmalina + Ceramica.svg" class="img-fluid image-banner mb-3" />
+        <h6 class="text-styles unalinea">
+          <strong>TURMALINA</strong>
+        </h6>
+      </div>
+
+    
 
     </div>
   </section>
@@ -539,7 +541,7 @@
             <strong>¡OLVIDATE DEL FRIZZ!</strong>
           </h4>
           <p class="p_pixel newaline">
-El secador de cabello Diamond Ceramic Shine de Remington cuenta con un generador de iones que disminuye el tiempo de secado y ayuda el cabello a absorber la humedad, reduciendo el frizz y la estática.          </p>
+            El secador de cabello Diamond Ceramic Shine de Remington cuenta con un generador de iones que disminuye el tiempo de secado y ayuda el cabelo a absorber la humedad essencial reduciendo el frizz y la estática. </p>
         </div>
         <div class="col-sm-4">
           <h4 class="text-left h4 LISTADO" style="text-transform: uppercase">
@@ -548,11 +550,12 @@ El secador de cabello Diamond Ceramic Shine de Remington cuenta con un generador
           <p class="p_pixel newaline">
             Ese secador te permite crear diferentes estilos todos los días. Incluye concentrador para un flujo de aire centrado y un elegante alisado, y difusor para definición de rizos sin perder el aspecto natural. 
 
+
           </p>
         </div>
         <div class="col-sm-4">
           <h4 class="text-left h4 LISTADO" style="text-transform: uppercase">
-            <strong>MOTOR DE ALTO RENDIMIENTO </strong>
+            <strong>MOTOR DE ALTO RENDIMIENTO  </strong>
           </h4>
           <p class="p_pixel newaline">
             Crea peinados en casa con resultados de salón gracias a su potente motor de 1900 W. ¡Obtén un secado sin esfuerzo y resultados magníficos!
