ceramica icon was changed

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
         display: flex; /* flexbox para centrar el contenido */
         justify-content: center; /* Centra horizontalmente el contenido */
         align-items: flex-start; /* Align text at the top of the container */
-        width: 65px;
+        width: 100px;
         flex-wrap: wrap;
         text-align: center;
       }
@@ -396,28 +396,28 @@
 
 
       <div class="imagen-container">
-        <img src="./IMG/2Garantia_Icon.svg" class="img-fluid image-banner mb-3" />
+        <img src="IMG/2Garantia_Icon.svg" class="img-fluid image-banner mb-3" />
         <h6 class="text-styles">
           <strong>2 AÑOS DE GARANTÍA</strong>
         </h6>
       </div>
 
       <div class="imagen-container">
-        <img src="./IMG/Ceramica.svg" class="img-fluid image-banner mb-3" />
+        <img src="IMG/Ceramicanew3.png" class="img-fluid image-banner mb-3" />
         <h6 class="text-styles">
           <strong>CERÁMICA</strong>
         </h6>
       </div>
       
       <div class="imagen-container">
-        <img src="./IMG/Iones.png" class="img-fluid image-banner mb-3" />
+        <img src="IMG/IonesImage.png" class="img-fluid image-banner mb-3" />
         <h6 class="text-styles">
           <strong> IONES </strong>
         </h6>
       </div>
 
       <div class="imagen-container">
-        <img src="./IMG/Microacondicionador.svg" class=" img-fluid image-banner mb-3" />
+        <img src="IMG/Microacondicionador.svg" class=" img-fluid image-banner mb-3" />
         <h6 class="text-styles">
           <strong>MICRO<span class="subscript">-</span> ACONDICIONADORES</strong>
         </h6>
@@ -426,7 +426,7 @@
 
 
       <div class="imagen-container">
-        <img src="./IMG/Turmalina + Ceramica.svg" class="img-fluid image-banner mb-3" />
+        <img src="IMG/Turmalina.svg" class="img-fluid image-banner mb-3" />
         <h6 class="text-styles unalinea">
           <strong>TURMALINA</strong>
         </h6>
@@ -475,7 +475,7 @@
     <div class="container">
       <div class="row">
         <img
-          src="./IMG/14-Caracteristicas-1800x660.jpg"
+          src="IMG/14-Caracteristicas-1800x660.jpg"
           alt="Banner "
           style="width: 100%"
         />
